Fixed the side-bar and nav links hover. Also, corrected the spacing between the ad boxes.

--- a/css/page.css
+++ b/css/page.css
@@ -9,7 +9,7 @@ body{
     height: inherit;
     width: 100%;
     display: grid;
-    grid-template-columns: 12% 63% 25%;
+    grid-template-columns: 18% 57% 25%;
     /*grid-template-rows: 40px repeat(3,1fr) 1fr; Changed*/
     grid-template-rows: 40px 1fr;
 }
@@ -28,10 +28,12 @@ nav a{
     text-decoration: none;
     color: white;
     font-size: 20px;
+    padding: 8px 15px;
 }
 
-nav li:hover{
+nav a:hover{
     background-color: lightgray;
+    color: black;
 
 }
 
@@ -47,7 +49,7 @@ nav ul{
 
 .nav-item{
     display: inline-block;
-    padding: 10px;
+    /*padding: 8px 15px;*/
 }
 
 .nav-item:hover{
@@ -55,15 +57,9 @@ nav ul{
 }
 
 .logo{
-    height: inherit;
-    display: inline-block;
-    padding: 10px;
     background-color: #343536;
 }
 
-.logo:hover{
-    background-color: lightgray;
-}
 /*SIDEBAR BEGINNING*/
 .side-bar{
     background-color: lightgray;
@@ -74,13 +70,8 @@ nav ul{
 
 }
 
-.side-nav{
-    padding: 5px 5px 5px 10px;
-
-}
-
 .menu{
-    padding: 15px 15px 15px 10px;
+    padding: 15px 15px 20px 10px;
     font-weight: bold;
 }
 
@@ -88,6 +79,8 @@ nav ul{
     text-decoration: none;
     color: black;
     display: block;
+    padding: 10px 5px 10px 10px;
+
 }
 
 
@@ -98,19 +91,21 @@ nav ul{
     list-style: none;
     padding: 0;
     margin: 0;
-    width: 100%;
+    width: 18%;
     position: fixed;
 
 }
 
 .side-bar li{
     width: 100%;
+    display: block;
+    /*padding: 5px 5px 5px 10px;*/
+    font-size: 18px;
 }
 
 .side-bar a:hover{
-    display: inline-block;
-    background-color: black;
     color: white;
+    background-color: black;
     width: 100%;
 }
 
@@ -163,7 +158,6 @@ main{
     grid-template-columns: 1fr;
     /*grid-template-rows: 1fr 2fr 1fr 2fr 1fr 2fr; Changed*/
     /*grid-gap: 10px; Changed*/
-    background-color: yellow;
 
 }
 
@@ -173,9 +167,6 @@ main{
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: rgba(255,105,180, 0.2);
-
-
 }
 
 .ad-item1{
@@ -188,6 +179,7 @@ main{
 .ad-item2{
     grid-row: 2 / 3;
     grid-column: 1 / 2;
+    margin-bottom: 100px;
 }
 
 .ad-item3{
@@ -199,6 +191,7 @@ main{
 .ad-item4{
     grid-column: 1 / 2;
     grid-row: 4 / 5;
+    margin-bottom: 120px;
 
 }
 
@@ -213,16 +206,17 @@ main{
     grid-row: 6 / 7;
 
 }
+.ad-item1, .ad-item3, .ad-item5{
+    margin-bottom: 20px;
+}
 
 .ad-box-1, .ad-box-3, .ad-box-5 {
     border: 1px dotted lightgray;
     width: 95%;
-    height: 45px;
+    height: 65px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
-
 }
 
 .ad-box-2, .ad-box-4, .ad-box-6 {
@@ -232,7 +226,6 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
 
 }
 
